k8s/manifests/services/resilio-sync/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: resilio-sync-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`resilio-sync.${CLUSTER_DOMAIN}`)
      services:
        - name: resilio-sync
          port: 8888
      middlewares:
        # - name: traefik-secure-headers
        #   namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
